# inventory-ocr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows-exe.yml
inventory_ocr/: annotate.py  detection.py  postprocessor.py  recognition.py  run.py  utils.py
inventory_ocr/config/: regions.yaml
