[project]
name = "inventory-ocr"
    version = "0.0.3"
authors = [
    { name = "Mathias Zinnen", email = "mathias.zinnen@gmail.com" }
]
description = "Read inventory cards, extract images, and create structured data."
readme = "README.md"
requires-python= ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ultralytics",
    "appdirs",
    "ocrmac; platform_system == 'Darwin'",
    "pero-ocr; platform_system == 'win32' or platform_system == 'linux'",
    "configparser",
    "tqdm",
    "Levenshtein",
    "gradio",
    "gradio_image_annotation"
]

[project.optional-dependencies]
pero = [
    "pero-ocr",
    "configparser"
]
mistral = [
    "mistralai",
    "dotenv"
]

[tool.setuptools]
packages = ["inventory_ocr"]
include-package-data = true
[tool.setuptools.package-data]
inventory_ocr = ["config/*.yaml","resources/example_output.json"]

[project.scripts]
inventory-ocr = "inventory_ocr.run:main"

[project.urls]
Homepage = "https://github.com/mathiaszinnen/inventory-ocr"
